--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!-- <app-cards [titles]="cardsTitle" (titleEvent$)="addCard($event)"></app-cards> -->
-
-<app-directive></app-directive>
+<app-table></app-table>
+<!-- <app-directive></app-directive> -->
 
