Assignment-@Inputand@Output

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!-- <app-cards [titles]="cardsTitle" (titleEvent$)="addCard($event)"></app-cards> -->
-<app-table></app-table>
+<app-cards [titles]="cardsTitle" (titleEvent$)="addCard($event)" (titleEventDelete$) = "deleteCard($event)"></app-cards>
+<!-- <app-table></app-table> -->
 <!-- <app-directive></app-directive> -->
-
