--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -8,11 +8,31 @@
   </section>
 
   <table mat-table>
-    <ng-container matColumnDef="position" *ngFor="let titles of cardsTitle">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <tr mat-cell > {{titles}} </tr>
+    <ng-container matColumnDef="position" *ngFor="let title of titles; index as i">
+      <tr mat-header-cell *matHeaderCellDef> No. </tr>
+      <tr mat-header-cell *matHeaderCellDef> Delete </tr>
+      <tr mat-cell > 
+        <li>
+          {{i+1}}
+          {{title}} 
+          <button type="button" class="btn btn-primary" (click)="onDeleteCard(i)">Delete</button>
+        </li> 
+
+      </tr>
+      <!-- <tr mat-cell > {{i}} </tr> -->
     </ng-container>
 
   </table>
+
+  <!-- <ng-container matColumnDef="score">
+    <th mat-header-cell *matHeaderCellDef> Score </th>
+    <td mat-cell *matCellDef="let user"> {{user.score}} </td>
+  </ng-container> -->
+
+
+
+  <!-- <table mat-table [dataSource]="titles">
+    
+  </table> -->
 
 </mat-card>
